# diagweave-workspace

./: Cargo.toml  README.md  README_CN.md  render_dedup_plan.md  rust-toolchain.toml
.github/workflows/: ci.yml
diagweave/: Cargo.toml
diagweave-macros/: Cargo.toml
diagweave-macros/src/: error.rs  lib.rs  set.rs  shared.rs  union.rs
diagweave-macros/src/error/: display.rs
diagweave-macros/src/set/: bitset.rs  gen.rs  parser.rs  resolver.rs
diagweave-macros/src/shared/: codegen.rs  constructors.rs  derive.rs  display.rs  from_attr.rs  naming.rs  options.rs  sanitize.rs  source.rs
diagweave/benches/: report_bench.rs
diagweave/schemas/: report-otel-v0.1.0.schema.json  report-v0.1.0.schema.json  report-v0.2.0.schema.json
diagweave/src/: lib.rs  otel.rs  render.rs  report.rs  trace.rs  utils.rs
diagweave/src/otel/: opentelemetry.rs
diagweave/src/render/: ir.rs  json.rs  otel_snapshot.rs  pretty.rs  stack_filter.rs
diagweave/src/render/json/: attachment.rs  helpers.rs  report.rs  trace.rs
diagweave/src/report/: accessors.rs  builder.rs  ext.rs  global.rs  impls.rs  macros.rs  trace.rs  traits.rs  transform.rs  types.rs
diagweave/src/report/types/: attachment.rs  config.rs  context.rs  error.rs  source_error.rs
diagweave/src/report/types/source_error/: traversal.rs  util.rs
diagweave/src/trace/: tracing.rs
diagweave/tests/: derive_error.rs  derive_ok.rs  global_config.rs  macro_ok.rs  report.rs  report_ir.rs  report_ir_tracing.rs  report_json.rs  report_more.rs  report_render.rs  report_snapshots.rs  report_source.rs  set_derive_ok.rs  trybuild.rs  union_ok.rs
diagweave/tests/report_common/: mod.rs
diagweave/tests/snapshots/: report_snapshots__snap_compact_basic.snap  report_snapshots__snap_compact_with_boundary.snap  report_snapshots__snap_json_basic.snap  report_snapshots__snap_json_with_attachments.snap  report_snapshots__snap_json_with_source_errors.snap  report_snapshots__snap_json_with_trace.snap  report_snapshots__snap_otel_basic.snap  report_snapshots__snap_otel_with_diag_sources.snap  report_snapshots__snap_otel_with_payload.snap  report_snapshots__snap_otel_with_trace.snap  report_snapshots__snap_pretty_basic.snap  report_snapshots__snap_pretty_empty_report.snap  report_snapshots__snap_pretty_nested_sources.snap  report_snapshots__snap_pretty_set_system.snap  report_snapshots__snap_pretty_with_all_sections.snap  report_snapshots__snap_pretty_with_display_causes.snap  report_snapshots__snap_pretty_with_source_chain.snap  report_snapshots__snap_pretty_with_stack_trace.snap
diagweave/tests/ui/derive/: set_copy_fail.stderr
diagweave/tests/ui/union/: constructor_collision.rs  constructor_collision.stderr  display_transparent_requires_single_tuple_field.rs  display_transparent_requires_single_tuple_field.stderr  from_requires_single_tuple_field.rs  from_requires_single_tuple_field.stderr
docs/: report-json-schema-v0.1.0.md  report-json-schema-v0.2.0.md  report-otel-schema-v0.1.0.md
docs/ai/: ai_docs.md  ai_docs_cn.md  specification_cn.md  specification_en.md
docs/ai/cn/: README.md  diagnostic_report_container.md  error_definition_and_conversion.md
docs/ai/en/: README.md  diagnostic_report_container.md  error_definition_and_conversion.md
examples/cloud-native-stack/: Cargo.toml  README.md  README_CN.md  docker-compose.yaml  otel-collector-config.yaml  output
examples/cloud-native-stack/src/: main.rs
examples/showcase/: Cargo.toml  README.md  output
examples/showcase/src/: main.rs
scripts/: test-feature-matrix.ps1  test-feature-matrix.sh
