[package]
name = "diagweave-macros"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural macros for diagweave DSL: set! and union!."
readme = "README.md"
homepage.workspace = true
documentation.workspace = true
keywords = ["proc-macro", "error-handling", "diagnostics", "diagweave"]
categories = ["rust-patterns", "development-tools::debugging"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lints]
workspace = true
