[package]
name = "cloud-native-stack"
version = "0.1.0"
edition = "2024"
publish = false
description = "Cloud-native error handling showcase for diagweave"
license = "MIT"

[dependencies]
diagweave = { workspace = true, features = ["json", "trace", "otel", "opentelemetry", "tracing"] }
opentelemetry = { version = "0.31", default-features = false, features = ["logs", "trace"] }
opentelemetry_otlp = { package = "opentelemetry-otlp", version = "0.31" }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs", "trace"] }
opentelemetry_stdout = { package = "opentelemetry-stdout", version = "0.31", default-features = false, features = ["logs", "trace"] }
serde_json = "1"
tracing = { workspace = true }
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry", "std"] }

[lints]
workspace = true
